Fixed image upload with article